Fix installation item alignment

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -395,6 +395,7 @@ textarea.form-control{
 @media (min-width: 768px) {
     .installations__list-item {
         width: 50%;
+        margin: 0;
     }
 }
 
